[tool.poetry]
name = "makehash-python"
version = "0.1.0"
description = ""
authors = ["Cologler <skyoflw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fsoopify = "*"
click-anno = "*"
colorama = "*"
alive-progress = "*"

[tool.poetry.dev-dependencies]
setupmeta-builder = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
