[tool.poetry]
name = "makehash"
version = "0.0.0"
description = ""
authors = [ "Cologler <skyoflw@gmail.com>" ]
readme = "README.md"

  [tool.poetry.dependencies]
  python = "^3.9"
  fsoopify = "*"
  click-anno = "*"
  colorama = "*"
  alive-progress = "*"

  [tool.poetry.dev-dependencies]
  pytest = "^6.2.5"
  pytest-cov = "^2.12.1"
  pyinvoke = "^1.0.4"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning" ]
build-backend = "poetry.core.masonry.api"
